fix hidden components opacity for better readability

--- a/src/components/FakeChat/util.module.css
+++ b/src/components/FakeChat/util.module.css
@@ -8,5 +8,5 @@
 }
 
 .hidden {
-  opacity: 0.2;
+  opacity: 0.5;
 }
